--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.58.0"
+    "aws-sdk": "^2.58.0",
+    "moment": "^2.18.1"
   }
 }
